RESOLVED FIXED66158
allowRoundingHacksCallback uses the wrong argument for 'thisObject'.
https://bugs.webkit.org/show_bug.cgi?id=66158
Summary allowRoundingHacksCallback uses the wrong argument for 'thisObject'.
Andy Estes
Reported 2011-08-12 13:04:42 PDT
allowRoundingHacksCallback uses the wrong argument for 'thisObject'.
Attachments
Patch (1.69 KB, patch)
2011-08-12 13:06 PDT, Andy Estes
mitz: review+
Andy Estes
Comment 1 2011-08-12 13:06:20 PDT
Andy Estes
Comment 2 2011-08-12 13:19:01 PDT
Note You need to log in before you can comment on or make changes to this bug.