allowRoundingHacksCallback uses the wrong argument for 'thisObject'. https://bugs.webkit.org/show_bug.cgi?id=66158

Reviewed by Dan Bernstein.

* DumpRenderTree/LayoutTestController.cpp:
(allowRoundingHacksCallback): The third argument is the 'this'
JSObjectRef, not the second.

Canonical link: https://commits.webkit.org/82009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92984 268f45cc-cd09-0410-ab3c-d52691b4dbfc